--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,19 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="icon" type="image/png" href="/zs_favicon.png">
+
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+
+    <meta property="og:title" content="Zachary Sturman Portfolio">
+    <meta property="og:description" content="Explore Zachary Sturman's Software Engineering portfolio.">
+    <meta property="og:image" content="https://www.ZSdynamics.com/og_img.png'">
+    <title>Zachary Sturman Portfolio</title>
+
+    <meta property="og:url" content="https://www.zsdynamics.com/home">
+    <meta property="og:type" content="website">
+
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Nunito+Sans:wght@300&display=swap');
     </style>
