--- a/client/index.html
+++ b/client/index.html
@@ -1,24 +1,55 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="icon" type="image/png" href="/zs_favicon.png">
+    <!-- Google Tag Manager -->
+    <script>
+      (function (w, d, s, l, i) {
+        w[l] = w[l] || [];
+        w[l].push({ "gtm.start": new Date().getTime(), event: "gtm.js" });
+        var f = d.getElementsByTagName(s)[0],
+          j = d.createElement(s),
+          dl = l != "dataLayer" ? "&l=" + l : "";
+        j.async = true;
+        j.src = "https://www.googletagmanager.com/gtm.js?id=" + i + dl;
+        f.parentNode.insertBefore(j, f);
+      })(window, document, "script", "dataLayer", "GTM-NBFFJVR4");
+    </script>
+    <!-- End Google Tag Manager -->
+
+    <link rel="icon" type="image/png" href="/zs_favicon.png" />
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <meta property="og:title" content="Zachary Sturman Portfolio">
-    <meta property="og:description" content="Explore Zachary Sturman's Software Engineering portfolio.">
-    <meta property="og:image" content="https://www.ZSdynamics.com/og_img.png'">
+    <meta property="og:title" content="Zachary Sturman Portfolio" />
+    <meta
+      property="og:description"
+      content="Explore Zachary Sturman's Software Engineering portfolio."
+    />
+    <meta
+      property="og:image"
+      content="https://www.ZSdynamics.com/og_img.png'"
+    />
     <title>Zachary Sturman Portfolio</title>
 
-    <meta property="og:url" content="https://www.zsdynamics.com/home">
-    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.zsdynamics.com/home" />
+    <meta property="og:type" content="website" />
 
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Nunito+Sans:wght@300&display=swap');
+      @import url("https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700&family=Nunito+Sans:wght@300&display=swap");
     </style>
   </head>
   <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-NBFFJVR4"
+        height="0"
+        width="0"
+        style="display: none; visibility: hidden"
+      ></iframe
+    ></noscript>
+    <!-- End Google Tag Manager (noscript) -->
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
